--- a/chara_crt/chara_crt.csproj
+++ b/chara_crt/chara_crt.csproj
@@ -9,10 +9,45 @@
 
   <ItemGroup>
     <None Remove="imgs\image.png" />
+    <None Remove="imgs\img.png" />
+    <None Remove="imgs\img0.png" />
+    <None Remove="imgs\img1.png" />
+    <None Remove="imgs\img2.png" />
+    <None Remove="imgs\img3.png" />
+    <None Remove="imgs\img4.png" />
+    <None Remove="imgs\img5.png" />
+    <None Remove="imgs\img6.png" />
+    <None Remove="imgs\img7.png" />
+    <None Remove="imgs\img8.png" />
+    <None Remove="imgs\img9.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="imgs\image.png">
+    <Content Include="imgs\img1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="imgs\img2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="imgs\img3.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="imgs\img4.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="imgs\img5.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="imgs\img6.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="imgs\img7.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="imgs\img8.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="imgs\img9.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
